# SuperCode

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: publish.yml
docs/: syntax.md
examples/c_export_func/: main.c  use_from_python.py
examples/c_local_func/: main.c
examples/c_struct/: main.c
examples/cpp_class/: main.cpp
examples/no_ai/c_export/: main.c
examples/no_ai/cpp_import/: main.cpp
examples/no_ai/python_import/: main.py
examples/no_ai/src/super_impl/: mode_min_tie.c
examples/python_func/: main.py
examples/python_local_func/: main.py
include/: supercode.h  supercode.hpp
packaging/aur/python-supercode-cli-git/: .SRCINFO  PKGBUILD
packaging/aur/python-supercode-cli-git/python-supercode-cli-git/: config  packed-refs
packaging/aur/python-supercode-cli-git/python-supercode-cli-git/objects/pack/: pack-942924d0b4b0a38a0d4301342726da396f3c5cde.idx  pack-942924d0b4b0a38a0d4301342726da396f3c5cde.pack  pack-942924d0b4b0a38a0d4301342726da396f3c5cde.rev
packaging/aur/python-supercode-git/: .SRCINFO  PKGBUILD
scripts/: check_clean_env.sh
supercode/: __init__.py  artifacts.py  bindings_python.py  build.py  clean.py  cli.py  config.py  context.py  emitter_c.py  emitter_cpp.py  emitter_python.py  generator.py  holes.py  init.py  inspect.py  llm.py  manifest.py  paths.py  resolver.py  scanner.py  verify.py
supercode/resources/: __init__.py
supercode/resources/include/: supercode.h
tests/: test_cli_runtime.py  test_config.py  test_init.py  test_manifest.py  test_scanner.py
